--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
   </main>
 
   <footer>
-    <p>© 2025 ML‑RAY Project · Made with ♥ for open science</p>
+    <p>© 2025 ML‑RAY Project</p>
   </footer>
 
 </body>
